--- a/src/lngProvider/locales/ar_SA.json
+++ b/src/lngProvider/locales/ar_SA.json
@@ -5,6 +5,7 @@
   "sidebar.dashboard.ecommerce": "التجارة الإلكترونية",
   "sidebar.dashboard.news": "أخبار",
   "sidebar.dashboard.intranet": "الشبكة الداخلية",
+  "sidebar.dashboard.synfin": "Synfin",
   "sidebar.components": "المكونات",
   "sidebar.components.alerts": "التنبيهات",
   "sidebar.components.appbar": "بار التطبيق",
