--- a/src/lngProvider/locales/en_US.json
+++ b/src/lngProvider/locales/en_US.json
@@ -561,6 +561,7 @@
   "component.selectionControl.radioBtnGroup": "Radio Buttons Group",
   "sidebar.dashboard.crm": "Crm",
   "sidebar.dashboard.crypto": "Crypto",
+  "sidebar.dashboard.synfin": "Synfin",
   "sidebar.dashboard.listing": "Listing",
   "sidebar.classic": "Classic",
   "sidebar.modern": "Modern",
@@ -583,6 +584,9 @@
   "sidebar.clientAdmin.ViewUser":"View User",
   "sidebar.clientAdmin.CreateBranch": "Add Branch",
   "sidebar.clientAdmin.ViewBranch":"View Branch",
+  "sidebar.loans": "Loans",
+  "sidebar.loans.CreateLoanAcc":"Create Loan Account",
+  "sidebar.loans.LoanDisbursement": "Loan Disbursement",
   "table.branches.list": "Branches",
   "sidebar.clientAdmin.CreateCurrency": "Add Currency",
   "sidebar.clientAdmin.ViewCurrency":"View Currency",
