Added create share product module

--- a/src/lngProvider/locales/en_US.json
+++ b/src/lngProvider/locales/en_US.json
@@ -585,6 +585,9 @@
   "sidebar.clientAdmin.CreateBranch": "Add Branch",
   "sidebar.clientAdmin.ViewBranch":"View Branch",
   "sidebar.loans": "Loans Management",
+  "sidebar.adminManagement":"Admin Management",
+  "sidebar.adminManagement.AddLoanProduct": "Add Loan Product",
+  "sidebar.adminManagement.CreateShareProduct": "Create Share Product",
   "sidebar.loans.CreateLoanAcc":"Create Loan Account",
   "sidebar.loans.LoanDisbursement": "Loan Disbursement",
   "table.branches.list": "Branches",
