sacco management module added

--- a/src/lngProvider/locales/en_US.json
+++ b/src/lngProvider/locales/en_US.json
@@ -589,6 +589,11 @@
   "sidebar.adminManagement.AddLoanProduct": "Add Loan Product",
   "sidebar.adminManagement.CreateShareProduct": "Create Share Product",
   "sidebar.adminManagement.RegSavingsAndDeposit": "Add Savings & Deposit",
+  "sidebar.adminManagement.BankManagement.AddBankDetails": "Add Bank Details",
+  "sidebar.adminManagement.BankManagement.EditBankDetails": "Edit Bank Details",
+  "sidebar.adminManagement.BankManagement.RelationshipManager": "Relationship Manager",
+  "sidebar.adminManagement.SaccoManagement.AddSaccoBranch": "Add Sacco Branch",
+  "sidebar.adminManagement.SaccoManagement.EditSaccoBranch": "Edit Sacco Branch",
   "sidebar.loans.CreateLoanAcc":"Create Loan Account",
   "sidebar.loans.LoanDisbursement": "Loan Disbursement",
   "table.branches.list": "Branches",
